--- a/company-account.html
+++ b/company-account.html
@@ -16,6 +16,8 @@
       --blue:   #1a3a6b;
       --gold:   #b7860b;
     }
+
+    /* ── Summary Cards ── */
     .sum-card { border-radius:8px; padding:18px 20px; position:relative; overflow:hidden; border:1px solid #dee2e6; background:#fff; box-shadow:0 1px 4px rgba(0,0,0,.08); }
     .sum-card::before { content:''; position:absolute; left:0;top:0;bottom:0;width:4px; }
     .sum-card.red::before   { background:var(--accent); }
@@ -27,16 +29,24 @@
     .sum-card .s-value.danger  { color:var(--accent); }
     .sum-card .s-value.success { color:var(--green); }
     .sum-card .s-sub { font-size:11px;color:#aaa;margin-top:3px; }
+
+    /* ── Tabs ── */
     .nav-tabs .nav-link { font-size:13px;font-weight:600;color:#555; }
     .nav-tabs .nav-link.active { color:var(--accent);border-bottom:2px solid var(--accent); }
+
+    /* ── Ledger Table ── */
     .ledger-wrap { background:#fff;border:1px solid #dee2e6;border-radius:8px;overflow:hidden;margin-top:14px; }
     .ledger-tbl  { width:100%;border-collapse:collapse; }
     .ledger-tbl thead th { background:var(--ink);color:#fff;padding:10px 13px;font-size:11px;font-weight:700;text-transform:uppercase;letter-spacing:.5px; }
     .ledger-tbl tbody tr:hover { background:#f9f9f9; }
     .ledger-tbl tbody tr+tr { border-top:1px solid #f0f0f0; }
     .ledger-tbl td { padding:10px 13px;font-size:13px;vertical-align:middle; }
+
     .filter-bar { background:#fff;border:1px solid #dee2e6;border-radius:8px;padding:14px 18px; }
     .total-box  { background:#fff3cd;border:1px solid #ffc107;border-radius:5px;padding:8px 14px;font-weight:800;font-size:1.05rem;color:#856404;display:none; }
+    .progress   { height:16px;border-radius:4px; }
+
+    /* ── Modal headers ── */
     .modal-hdr-green { background:var(--green);color:#fff; }
     .modal-hdr-blue  { background:var(--blue);color:#fff; }
     .modal-hdr-ink   { background:var(--ink);color:#fff; }
@@ -45,13 +55,63 @@
     .modal-hdr-blue  .btn-close,
     .modal-hdr-ink   .btn-close,
     .modal-hdr-gold  .btn-close { filter:invert(1); }
-    .progress { height:16px;border-radius:4px; }
+
+    /* ── Searchable Dropdown (matches transactions page style) ── */
+    .sd-wrap { position:relative; }
+    .sd-input-row {
+      display:flex; align-items:center;
+      border:1px solid #dee2e6; border-radius:6px;
+      background:#fff; overflow:hidden;
+      transition: border-color .15s;
+    }
+    .sd-input-row:focus-within { border-color:#0d6efd; box-shadow:0 0 0 .2rem rgba(13,110,253,.15); }
+    .sd-icon  { padding:0 10px; color:#aaa; font-size:14px; flex-shrink:0; }
+    .sd-input {
+      border:none; outline:none; width:100%;
+      padding:8px 4px; font-size:14px; background:transparent;
+    }
+    .sd-clear {
+      padding:0 10px; color:#aaa; cursor:pointer;
+      font-size:18px; flex-shrink:0; display:none;
+      line-height:1;
+    }
+    .sd-clear:hover { color:#dc3545; }
+    .sd-list {
+      display:none; position:absolute; top:calc(100% + 2px);
+      left:0; right:0; z-index:9999;
+      background:#fff; border:1px solid #dee2e6;
+      border-radius:6px; max-height:240px; overflow-y:auto;
+      box-shadow:0 4px 16px rgba(0,0,0,0.13);
+    }
+    .sd-item {
+      padding:9px 14px; cursor:pointer;
+      display:flex; justify-content:space-between; align-items:center;
+      font-size:13px; border-bottom:1px solid #f5f5f5;
+      transition:background .1s;
+    }
+    .sd-item:last-child { border-bottom:none; }
+    .sd-item:hover { background:#f0f4ff; }
+    .sd-item.selected { background:#e8f0fe; font-weight:700; }
+    .sd-item .sd-badge {
+      border-radius:5px; padding:2px 8px;
+      font-size:11px; font-weight:700; color:#fff;
+      margin-right:8px; flex-shrink:0;
+    }
+    .sd-item .sd-bal {
+      font-size:11px; font-weight:700;
+      white-space:nowrap; margin-left:8px;
+    }
+    .sd-empty { padding:12px 14px; color:#aaa; font-size:13px; text-align:center; }
+    .sd-balance-info {
+      font-size:11px; font-weight:700;
+      display:block; min-height:16px; margin-top:4px;
+    }
   </style>
 </head>
 
 <body data-page="company-account">
 
-  <!-- Navbar — same placeholder as customers.html -->
+  <!-- Navbar -->
   <div id="navbar-placeholder"></div>
 
   <div class="container py-4">
@@ -134,7 +194,7 @@
     </div>
 
     <!-- Tabs -->
-    <ul class="nav nav-tabs" id="companyTabs">
+    <ul class="nav nav-tabs">
       <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#tab-transactions">All Transactions</a></li>
       <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#tab-stock"      onclick="window.loadStockHistory()">Stock Ledger</a></li>
       <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#tab-member"     onclick="window.loadMemberUsageSummary()">Member Usage</a></li>
@@ -144,7 +204,7 @@
 
     <div class="tab-content mt-3">
 
-      <!-- Tab 1: All Transactions -->
+      <!-- Tab 1 -->
       <div class="tab-pane fade show active" id="tab-transactions">
         <div class="filter-bar mb-3 d-flex flex-wrap gap-2 align-items-end">
           <div>
@@ -168,34 +228,23 @@
               <option value="adjustment">Adjustment</option>
             </select>
           </div>
-          <button class="btn btn-primary btn-sm" id="btn-apply-company-filter">
-            <i class="bi bi-funnel"></i> Filter
-          </button>
-          <button class="btn btn-secondary btn-sm" id="btn-clear-company-filter">
-            <i class="bi bi-x-circle"></i> Clear
-          </button>
+          <button class="btn btn-primary btn-sm" id="btn-apply-company-filter"><i class="bi bi-funnel"></i> Filter</button>
+          <button class="btn btn-secondary btn-sm" id="btn-clear-company-filter"><i class="bi bi-x-circle"></i> Clear</button>
           <div class="ms-auto d-flex gap-3 align-items-center" style="font-size:12px;font-family:'Courier New',monospace;">
             <span>In: <strong id="ctxn-total-in" class="text-success">—</strong></span>
             <span>Out: <strong id="cxtn-total-out" class="text-danger">—</strong></span>
-            <span>Net Owed: <strong id="cxtn-net" class="text-danger">—</strong></span>
+            <span>Net: <strong id="cxtn-net" class="text-danger">—</strong></span>
           </div>
         </div>
-        <div class="ledger-wrap">
-          <div class="table-responsive">
-            <table class="ledger-tbl">
-              <thead><tr>
-                <th>#</th><th>Date</th><th>Type</th><th>Amount</th>
-                <th>Charges</th><th>Net</th><th>Member</th><th>Details</th><th></th>
-              </tr></thead>
-              <tbody id="company-txn-table">
-                <tr><td colspan="9" class="text-center py-4 text-muted">Loading...</td></tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
+        <div class="ledger-wrap"><div class="table-responsive">
+          <table class="ledger-tbl">
+            <thead><tr><th>#</th><th>Date</th><th>Type</th><th>Amount</th><th>Charges</th><th>Net</th><th>Member</th><th>Details</th><th></th></tr></thead>
+            <tbody id="company-txn-table"><tr><td colspan="9" class="text-center py-4 text-muted">Loading...</td></tr></tbody>
+          </table>
+        </div></div>
       </div>
 
-      <!-- Tab 2: Stock Ledger -->
+      <!-- Tab 2 -->
       <div class="tab-pane fade" id="tab-stock">
         <div class="ledger-wrap"><div class="table-responsive">
           <table class="ledger-tbl">
@@ -205,7 +254,7 @@
         </div></div>
       </div>
 
-      <!-- Tab 3: Member Usage -->
+      <!-- Tab 3 -->
       <div class="tab-pane fade" id="tab-member">
         <div class="ledger-wrap"><div class="table-responsive">
           <table class="ledger-tbl">
@@ -215,7 +264,7 @@
         </div></div>
       </div>
 
-      <!-- Tab 4: Repayments -->
+      <!-- Tab 4 -->
       <div class="tab-pane fade" id="tab-repayments">
         <p class="fw-bold text-success mb-2" style="font-family:'Courier New',monospace;">Total Repaid: <span id="repayment-total">—</span></p>
         <div class="ledger-wrap"><div class="table-responsive">
@@ -226,7 +275,7 @@
         </div></div>
       </div>
 
-      <!-- Tab 5: Expense Ledger -->
+      <!-- Tab 5 -->
       <div class="tab-pane fade" id="tab-expenses">
         <div class="ledger-wrap"><div class="table-responsive">
           <table class="ledger-tbl">
@@ -236,11 +285,13 @@
         </div></div>
       </div>
 
-    </div><!-- /tab-content -->
+    </div>
   </div><!-- /container -->
 
 
-  <!-- ══ MODAL 1: Stock Purchase ══════════════════════════ -->
+  <!-- ══════════════════════════════════════════════
+       MODAL 1 — Stock Purchase
+  ══════════════════════════════════════════════ -->
   <div class="modal fade" id="stockPurchaseModal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -301,7 +352,10 @@
   </div>
 
 
-  <!-- ══ MODAL 2: Member Card Usage ══════════════════════ -->
+  <!-- ══════════════════════════════════════════════
+       MODAL 2 — Member Card Usage
+       🔍 SEARCHABLE: type naam ya SR No
+  ══════════════════════════════════════════════ -->
   <div class="modal fade" id="memberCardModal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -312,28 +366,23 @@
           </div>
           <div class="modal-body">
             <div class="row g-3">
+
+              <!-- ✅ SEARCHABLE MEMBER DROPDOWN -->
               <div class="col-12">
-                <label class="form-label">Member *</label>
-                <!-- ✅ Searchable dropdown — type name or SR No to filter -->
-                <div id="mcu-search-wrap" style="position:relative;">
-                  <div style="display:flex;align-items:center;border:1px solid #dee2e6;border-radius:6px;background:#fff;overflow:hidden;">
-                    <span style="padding:0 10px;color:#aaa;font-size:13px;">🔍</span>
-                    <input type="text" id="mcu-search-input" autocomplete="off"
-                      placeholder="Naam ya SR No likho..."
-                      style="border:none;outline:none;width:100%;padding:7px 4px;font-size:14px;background:transparent;">
-                    <span id="mcu-search-clear" style="padding:0 10px;color:#aaa;cursor:pointer;font-size:16px;display:none;" title="Clear">✕</span>
+                <label class="form-label">Member * <small class="text-muted">(naam ya SR No likho)</small></label>
+                <div class="sd-wrap" id="mcu-wrap">
+                  <div class="sd-input-row">
+                    <span class="sd-icon">🔍</span>
+                    <input class="sd-input" id="mcu-search" type="text"
+                           autocomplete="off" placeholder="Naam ya SR No likho...">
+                    <span class="sd-clear" id="mcu-clear" title="Clear">✕</span>
                   </div>
-                  <div id="mcu-search-list"
-                    style="display:none;position:absolute;top:100%;left:0;right:0;z-index:9999;
-                           background:#fff;border:1px solid #dee2e6;border-top:none;
-                           border-radius:0 0 6px 6px;max-height:220px;overflow-y:auto;
-                           box-shadow:0 4px 16px rgba(0,0,0,0.12);">
-                  </div>
-                  <!-- Hidden real value sent on submit -->
-                  <input type="hidden" id="mcu-member-id" name="mcu-member-id">
+                  <div class="sd-list" id="mcu-list"></div>
+                  <input type="hidden" id="mcu-member-id">
                 </div>
-                <small id="mcu-member-balance" style="font-size:11px;display:block;min-height:16px;margin-top:3px;"></small>
+                <span class="sd-balance-info" id="mcu-balance-info"></span>
               </div>
+
               <div class="col-12">
                 <label class="form-label">Fuel Type *</label>
                 <select class="form-select" id="mcu-fuel-type" required>
@@ -380,7 +429,9 @@
   </div>
 
 
-  <!-- ══ MODAL 3: Repayment ═══════════════════════════════ -->
+  <!-- ══════════════════════════════════════════════
+       MODAL 3 — Repayment
+  ══════════════════════════════════════════════ -->
   <div class="modal fade" id="repaymentModal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -429,7 +480,10 @@
   </div>
 
 
-  <!-- ══ MODAL 4: Expense Entry (Dual Account) ════════════ -->
+  <!-- ══════════════════════════════════════════════
+       MODAL 4 — Expense Entry (Dual Account)
+       🔍 SEARCHABLE: Account + Paid From
+  ══════════════════════════════════════════════ -->
   <div class="modal fade" id="dualExpenseModal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -444,16 +498,25 @@
               Yeh entry <strong>Expense section</strong> mein bhi jayegi <strong>aur</strong> selected account ke ledger mein bhi record hogi.
             </div>
             <div class="row g-3">
+
+              <!-- ✅ SEARCHABLE ACCOUNT DROPDOWN -->
               <div class="col-12">
-                <label class="form-label">Account (Dual Role) *</label>
-                <!-- ✅ Live from customers table — same list as customers page -->
-                <select class="form-select" id="dre-account-id" required>
-                  <option value="">-- Account Select Karein --</option>
-                </select>
+                <label class="form-label">Account * <small class="text-muted">(naam ya SR No likho)</small></label>
+                <div class="sd-wrap" id="dre-wrap">
+                  <div class="sd-input-row">
+                    <span class="sd-icon">🔍</span>
+                    <input class="sd-input" id="dre-search" type="text"
+                           autocomplete="off" placeholder="Naam ya SR No likho...">
+                    <span class="sd-clear" id="dre-clear" title="Clear">✕</span>
+                  </div>
+                  <div class="sd-list" id="dre-list"></div>
+                  <input type="hidden" id="dre-account-id">
+                </div>
               </div>
+
               <div class="col-12">
                 <label class="form-label">Expense Category *</label>
-                <!-- ✅ Live from expense_categories table -->
+                <!-- ✅ From expense_categories table -->
                 <select class="form-select" id="dre-expense-type" required>
                   <option value="">-- Category --</option>
                 </select>
@@ -466,13 +529,22 @@
                 <label class="form-label">Description *</label>
                 <input type="text" class="form-control" id="dre-description" placeholder="e.g. November mahine ka kiraya" required>
               </div>
+
+              <!-- ✅ SEARCHABLE PAID FROM DROPDOWN -->
               <div class="col-6">
-                <label class="form-label">Paid From *</label>
-                <!-- ✅ Live from customers table — bank & cash accounts -->
-                <select class="form-select" id="dre-paid-from" required>
-                  <option value="">-- Source --</option>
-                </select>
+                <label class="form-label">Paid From * <small class="text-muted">(account ya cash)</small></label>
+                <div class="sd-wrap" id="paid-wrap">
+                  <div class="sd-input-row">
+                    <span class="sd-icon">🔍</span>
+                    <input class="sd-input" id="paid-search" type="text"
+                           autocomplete="off" placeholder="Source...">
+                    <span class="sd-clear" id="paid-clear" title="Clear">✕</span>
+                  </div>
+                  <div class="sd-list" id="paid-list"></div>
+                  <input type="hidden" id="dre-paid-from">
+                </div>
               </div>
+
               <div class="col-6">
                 <label class="form-label">Date</label>
                 <input type="date" class="form-control" id="dre-date">
@@ -489,7 +561,7 @@
   </div>
 
 
-  <!-- Toast — same as customers.html -->
+  <!-- Toast -->
   <div class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index:9999">
     <div id="liveToast" class="toast" role="alert">
       <div class="toast-header">
@@ -500,10 +572,10 @@
     </div>
   </div>
 
-  <!-- Footer — same placeholder as customers.html -->
+  <!-- Footer -->
   <div id="footer-placeholder"></div>
 
-  <!-- Scripts — exact same order as customers.html -->
+  <!-- Scripts — same order as customers.html -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="js/config.js"></script>
